pushpop-table-view/pushpop-table-view.css
/* ... */
.pp-time-input-table-view-cell > h1,
.pp-time-input-table-view-cell > h2 {
  float: left;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  text-rendering: auto;
}

.pp-time-input-table-view-cell > h1 {
  color: #516691;
  font-size: 0.75em;
  line-height: 1em;
  margin: 7px 0 0;
  width: 30%;
  text-align: right;
}

.pp-time-input-table-view-cell > h1::after {
  content: '\00a0\00a0'; /* Add spacer after the label text */
}

.pp-time-input-table-view-cell > h2 {
  color: #000;
  font-size: 0.9em;
  line-height: 1em;
  margin: 4px 0 2px;
  width: 70%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.pp-time-input-table-view-cell.pp-table-view-selected-state > h1,
.pp-time-input-table-view-cell.pp-table-view-selected-state > h2 {
  color: #fff;
}

/**
  Pushpop.TableViewCell.AccessoryType
  ===================================
  pp-table-view-cell-accessory
*/
.pp-table-view-cell-accessory {
  display: block;
  font-family: PushpopGlyphs;
  font-size: 1em;
  line-height: 2em;
  position: absolute;
  margin-top: -1em;
  top: 50%;
  right: 0;
  width: 2em;
  height: 2em;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -ms-backface-visibility: hidden;
  -o-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate(0, 0);
  -ms-transform: translate(0, 0);
  -o-transform: translate(0, 0);
  transform: translate(0, 0);
}

.pp-table-view-cell-accessory::after {
  margin-left: 0.8em;
}

.pp-table-view-selected-state > .pp-table-view-cell-accessory::after {
  color: #fff;
}

/**
  Pushpop.TableViewCell.AccessoryType.DisclosureIndicator
  =======================================================
  pp-table-view-cell-accessory-disclosure-indicator
*/
.pp-table-view-cell-accessory-disclosure-indicator::after {
  color: #777;
  content: '\f000';
  position: absolute;
}

/**
  Pushpop.TableViewCell.AccessoryType.DetailDisclosureButton
  ==========================================================
  pp-table-view-cell-accessory-detail-disclosure-button
*/
.pp-table-view-cell-accessory-detail-disclosure-button::before {
  background: #2972d9; /* Old browsers */
  background: -moz-linear-gradient(top, #6a9de5 0%, #2972d9 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6a9de5), color-stop(100%, #2972d9)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #6a9de5 0%, #2972d9 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #6a9de5 0%, #2972d9 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #6a9de5 0%, #2972d9 100%); /* IE10+ */
  background: linear-gradient(top, #6a9de5 0%, #2972d9 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6a9de5', endColorstr='#2972d9', GradientType=0); /* IE6-9 */
  border: 2px solid #fff;
  content: '';
  display: block;
  position: absolute;
  margin: 0.3em 0 0 0.3em;
  width: 1.2em;
  height: 1.2em;
  -webkit-border-radius: 1.2em;
  -moz-border-radius: 1.2em;
  border-radius: 1.2em;
  -webkit-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.5);
  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.5);
}

.pp-table-view-cell-accessory-detail-disclosure-button::after {
  color: #fff;
  content: '\f000';
  position: absolute;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

/**
  Pushpop.TableViewCell.AccessoryType.Checkmark
  =============================================
  pp-table-view-cell-accessory-checkmark
*/
.pp-table-view-cell-accessory-checkmark::after {
  color: #324f85;
  content: '\f003';
  position: absolute;
}

/**
  Pushpop.TableViewCell.AccessoryType.ConfirmDeleteButton
  =======================================================
  pp-table-view-cell-accessory-confirm-delete-button
*/
.pp-table-view-cell-accessory-confirm-delete-button {
  background: #ed8288; /* Old browsers */
  background: -moz-linear-gradient(top,  #ed8288 0%, #c83640 50%, #be1623 51%, #bd1421 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ed8288), color-stop(50%,#c83640), color-stop(51%,#be1623), color-stop(100%,#bd1421)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #ed8288 0%,#c83640 50%,#be1623 51%,#bd1421 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #ed8288 0%,#c83640 50%,#be1623 51%,#bd1421 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #ed8288 0%,#c83640 50%,#be1623 51%,#bd1421 100%); /* IE10+ */
  background: linear-gradient(top,  #ed8288 0%,#c83640 50%,#be1623 51%,#bd1421 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ed8288', endColorstr='#bd1421',GradientType=0 ); /* IE6-9 */
	border: 1px solid rgba(0, 0, 0, 0.5);
	cursor: pointer;
	display: inline-block;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 0.7em;
	font-weight: bold;
	position: absolute;
	top: 0;
	right: 0;
	padding: 0.3em 0 0.25em;
	margin: 0.5em;
	width: 4.25em;
	zoom: 1; /* Trigger "hasLayout" in IE */
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
	border-radius: 0.5em;
	-webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
  -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3), inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
  visibility: hidden;
  opacity: 0;
  -webkit-transition: visibility 0s linear 0.2s, opacity 0.2s linear;
  -moz-transition: visibility 0s linear 0.2s, opacity 0.2s linear;
  -ms-transition: visibility 0s linear 0.2s, opacity 0.2s linear;
  -o-transition: visibility 0s linear 0.2s, opacity 0.2s linear;
  transition: visibility 0s linear 0.2s, opacity 0.2s linear;
}
/* ... */

